--- a/styles.css
+++ b/styles.css
@@ -243,8 +243,28 @@ button:hover {
   justify-items: center;
 }
 
+.hr label {
+  width: 80%;
+}
+
+.hr input {
+  text-align: center;
+}
+
+.hr .inputs div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+}
+
 .maxhr {
   background-color: rgb(196, 196, 238);
+  pointer-events: none;
+}
+
+.personalhr {
+  font-weight: 600;
 }
 
 label, .table {
@@ -390,7 +410,7 @@ select {
     font-size: 1.2vw;
   }
 
-  .hr .inputs, .plan .inputs {
+  .plan .inputs {
     padding: 0 20%;
   }
 }
