font color was too bright, made it a little more darker for a better user experience

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
   --navcolor: #1d3557;
   --bodycolor: #7fb7bb;
-  --fontcolor: #e63946;
+  --fontcolor: #bb2b37;
   --buttoncolor: #c3c8c2;
   --accentcolor: #457b9d;
   --mobilenavcolor: #457b9dd4;
